[package]
name = "create-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
fs_extra = "1.2.0"
lazy_static = "1.4.0"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
zip = "0.6.3"
