[package]
name = "create-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
fs_extra = "1.2.0"
inquire = "0.5.3"
regex = "1.7.0"
which = "4.4.0"
xshell = "0.2.3"
